include/opcode/riscv.h
@@ -357,6 +357,10 @@ static inline unsigned int riscv_insn_length (insn_t insn)
 #define OP_MASK_REG_LIST	0xf
 #define OP_SH_REG_LIST		4
 #define ZCMP_SP_ALIGNMENT	16
+#define OP_MASK_SREG1		0x7
+#define OP_SH_SREG1		7
+#define OP_MASK_SREG2		0x7
+#define OP_SH_SREG2		2
 
 #define NVECR 32
 #define NVECM 1
@@ -378,7 +382,10 @@ static inline unsigned int riscv_insn_length (insn_t insn)
 #define X_T2 7
 #define X_S0 8
 #define X_S1 9
+#define X_A0 10
+#define X_A1 11
 #define X_S2 18
+#define X_S7 23
 #define X_S10 26
 #define X_S11 27
 #define X_T3 28
@@ -425,6 +432,11 @@ static inline unsigned int riscv_insn_length (insn_t insn)
 
 /* The maximal number of subset can be required.  */
 #define MAX_SUBSET_NUM 4
+
+/* The range of sregs.  */
+#define RISCV_SREG_0_7(REGNO) \
+	((REGNO == X_S0 || REGNO == X_S1) \
+	 || (REGNO >= X_S2 && REGNO <= X_S7))
 
 /* All RISC-V instructions belong to at least one of these classes.  */
 enum riscv_insn_class
